RESOLVED FIXED100080
Web Inspector: ReferenceError: Can't find variable: bottom
https://bugs.webkit.org/show_bug.cgi?id=100080
Summary Web Inspector: ReferenceError: Can't find variable: bottom
Timothy Hatcher
Reported 2012-10-22 23:25:08 PDT
ReferenceError: Can't find variable: bottom evaluateOnLoad(String::format("[\"setDockSide\", %s]", attached ? "bottom" : "undocked")); the %s needs quotes. caused by bug 99717
Attachments
Proposed Change (2.23 KB, patch)
2012-10-22 23:31 PDT, Timothy Hatcher
no flags
Patch (1.57 KB, patch)
2012-10-23 09:29 PDT, Pavel Feldman
vsevik: review-
Timothy Hatcher
Comment 1 2012-10-22 23:31:15 PDT
Created attachment 170069 [details] Proposed Change
WebKit Review Bot
Comment 2 2012-10-23 00:54:05 PDT
Comment on attachment 170069 [details] Proposed Change Clearing flags on attachment: 170069 Committed r132185: <http://trac.webkit.org/changeset/132185>
WebKit Review Bot
Comment 3 2012-10-23 00:54:09 PDT
All reviewed patches have been landed. Closing bug.
Pavel Feldman
Comment 4 2012-10-23 09:28:59 PDT
Reopening to attach new patch.
Pavel Feldman
Comment 5 2012-10-23 09:29:03 PDT
Vsevolod Vlasov
Comment 6 2012-10-23 09:33:37 PDT
Comment on attachment 170182 [details] Patch This is already landed :)
Pavel Feldman
Comment 7 2012-10-23 09:34:33 PDT
Sorry, I just found console with webkit-patch upload pending and hit Enter :)
Note You need to log in before you can comment on or make changes to this bug.