Docking/undocking the Web Inspector does not work correctly in Safari.

The "docked" and "bottom" strings need quoted instead of being passed as identifiers.

https://bugs.webkit.org/show_bug.cgi?id=100080

Reviewed by Yury Semikhatsky.

* inspector/InspectorFrontendClientLocal.cpp:
(WebCore::InspectorFrontendClientLocal::setAttachedWindow): Put quotes around the %s.


Canonical link: https://commits.webkit.org/118105@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132185 268f45cc-cd09-0410-ab3c-d52691b4dbfc